--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-image:  'url(./images/client/src/images/sdelp.eth_background_for_a_videogames_16_9last.png)';
+  height: '100vh';
+  display: 'flex';
+  align-items: center;
+  justify-content: center;  
 }
 
 .App-logo {
@@ -27,6 +32,31 @@
 .App-link {
   color: #61dafb;
 }
+
+body {
+  /* background-image: url('./images/sdelp.eth_background_for_a_videogames_16_9last.png');
+  background-size: cover;
+  height: '100vh';
+  display: 'flex';
+  align-items: 'center';
+  justify-content: 'center' */
+}
+
+.container {
+  background-image: url('./images/sdelp.eth_background_for_a_videogames_16_9last.png');
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  }
+  
+  .boton-imagen {
+  background-image: url('./images/vg200x200.png');
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  }
 
 @keyframes App-logo-spin {
   from {
