--- a/client/src/components/Detail.module.css
+++ b/client/src/components/Detail.module.css
@@ -4,7 +4,8 @@
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100%;
     padding: 3%;
     background: rgb(11, 11, 11);
     background: linear-gradient(
